--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -17,5 +17,5 @@
     <string name="enrolled_uuid_">Enrolled UUID: %1$s</string>
     <string name="enrolled_guid_">Enrolled GUID: %1$s</string>
     <string name="enroll_success">Enroll success</string>
-    <string name="enroll_failed">Enroll success</string>
+    <string name="enroll_failed">Enroll failed</string>
 </resources>
